--- a/bin/Vista/VistaCuadricula5x5.fxml
+++ b/bin/Vista/VistaCuadricula5x5.fxml
@@ -13,7 +13,7 @@
 
 <Pane fx:id="ventanaCinco" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="471.0" prefWidth="549.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.CrucigramaController">
    <children>
-      <Button fx:id="botonStop" layoutX="313.0" layoutY="45.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Terminar partida" onAction="#TerminarPartida" />
+      <Button fx:id="botonStop" layoutX="313.0" layoutY="45.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Terminar partida" disable="true" onAction="#TerminarPartida" />
       <Text fx:id="nivelMedio" layoutX="14.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Medio">
          <font>
             <Font name="System Bold" size="19.0" />
@@ -28,7 +28,7 @@
             </Button>
         </items>
       </ToolBar>
-      <Button fx:id="cincobotonPista" layoutX="425.0" layoutY="45.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="PISTA" />
+      <Button fx:id="botonPista" layoutX="425.0" layoutY="45.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="PISTA" disable="true" />
       <GridPane layoutX="54.0" layoutY="153.0" prefHeight="184.0" prefWidth="182.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -45,35 +45,35 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TextArea fx:id="cinco00" cache="true" prefHeight="200.0" prefWidth="200.0">
+            <TextArea fx:id="cinco00" cache="true" prefHeight="200.0" prefWidth="200.0" disable="true">
                <font>
                   <Font name="System Bold" />
                </font>
             </TextArea>
-            <TextArea fx:id="cinco10" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
-            <TextArea fx:id="cinco20" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" />
-            <TextArea fx:id="cinco30" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" />
-            <TextArea fx:id="cinco01" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
-            <TextArea fx:id="cinco11" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextArea fx:id="cinco02" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2" />
-            <TextArea fx:id="cinco21" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <TextArea fx:id="cinco31" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-            <TextArea fx:id="cinco12" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextArea fx:id="cinco22" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <TextArea fx:id="cinco32" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-            <TextArea fx:id="cinco03" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3" />
-            <TextArea fx:id="cinco13" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextArea fx:id="cinco23" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-            <TextArea fx:id="cinco33" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-            <TextArea fx:id="cinco40" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" />
-            <TextArea fx:id="cinco41" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
-            <TextArea fx:id="cinco42" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="2" />
-            <TextArea fx:id="cinco43" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="3" />
-            <TextArea fx:id="cinco04" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4" />
-            <TextArea fx:id="cinco14" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <TextArea fx:id="cinco24" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-            <TextArea fx:id="cinco34" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="4" />
-            <TextArea fx:id="cinco44" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+            <TextArea fx:id="cinco10" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" disable="true"/>
+            <TextArea fx:id="cinco20" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" disable="true"/>
+            <TextArea fx:id="cinco30" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" disable="true"/>
+            <TextArea fx:id="cinco01" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" disable="true"/>
+            <TextArea fx:id="cinco11" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" disable="true"/>
+            <TextArea fx:id="cinco02" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2" disable="true"/>
+            <TextArea fx:id="cinco21" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1" disable="true"/>
+            <TextArea fx:id="cinco31" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="1" disable="true"/>
+            <TextArea fx:id="cinco12" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" disable="true"/>
+            <TextArea fx:id="cinco22" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2" disable="true"/>
+            <TextArea fx:id="cinco32" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="2" disable="true"/>
+            <TextArea fx:id="cinco03" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3" disable="true"/>
+            <TextArea fx:id="cinco13" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" disable="true"/>
+            <TextArea fx:id="cinco23" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="3" disable="true"/>
+            <TextArea fx:id="cinco33" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="3" disable="true"/>
+            <TextArea fx:id="cinco40" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" disable="true"/>
+            <TextArea fx:id="cinco41" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="1" disable="true"/>
+            <TextArea fx:id="cinco42" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="2" disable="true"/>
+            <TextArea fx:id="cinco43" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="3" disable="true"/>
+            <TextArea fx:id="cinco04" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4" disable="true"/>
+            <TextArea fx:id="cinco14" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4" disable="true"/>
+            <TextArea fx:id="cinco24" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="4" disable="true"/>
+            <TextArea fx:id="cinco34" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="4" disable="true"/>
+            <TextArea fx:id="cinco44" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="4" disable="true"/>
          </children>
       </GridPane>
       <Text fx:id="cincoVerticales" layoutX="293.0" layoutY="160.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Verticales">
@@ -91,7 +91,7 @@
             <Font name="System Bold" size="19.0" />
          </font>
       </Text>
-      <Button fx:id="BotonIniciarTiempo" layoutX="148.0" layoutY="70.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="INICIAR" onAction="#IniciarPartida" />
+      <Button fx:id="BotonIniciarTiempo" layoutX="148.0" layoutY="70.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="INICIAR" onAction="#IniciarPartida5x5" />
    </children>
    <effect>
       <ColorAdjust brightness="-0.35" />
