--- a/src/Vista/vistaCuadricula4x4.fxml
+++ b/src/Vista/vistaCuadricula4x4.fxml
@@ -13,7 +13,7 @@
 
 <Pane fx:id="ventanaCuatro" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="471.0" prefWidth="549.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.CrucigramaController">
    <children>
-      <Button fx:id="botonStop" layoutX="313.0" layoutY="45.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Terminar partida" onAction="#TerminarPartida"/>
+      <Button fx:id="botonStop" layoutX="313.0" layoutY="45.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Terminar partida" disable="true" onAction="#TerminarPartida"/>
       <Text fx:id="nivelFacil" layoutX="14.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Fácil">
          <font>
             <Font name="System Bold" size="19.0" />
@@ -28,7 +28,7 @@
             </Button>
         </items>
       </ToolBar>
-      <Button fx:id="botonPista" layoutX="425.0" layoutY="45.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="PISTA" />
+      <Button fx:id="botonPista" layoutX="425.0" layoutY="45.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="PISTA" disable="true"/>
       <GridPane layoutX="54.0" layoutY="153.0" prefHeight="184.0" prefWidth="182.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -43,26 +43,26 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TextArea fx:id="cuatro00" cache="true" prefHeight="200.0" prefWidth="200.0">
+            <TextArea fx:id="cuatro00" cache="true" prefHeight="200.0" prefWidth="200.0" disable="true">
                <font>
                   <Font name="System Bold" />
                </font>
             </TextArea>
-            <TextArea fx:id="cuatro10" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
-            <TextArea fx:id="cuatro20" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" />
-            <TextArea fx:id="cuatro30" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" />
-            <TextArea fx:id="cuatro01" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
-            <TextArea fx:id="cuatro11" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextArea fx:id="cuatro02" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2" />
-            <TextArea fx:id="cuatro21" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <TextArea fx:id="cuatro31" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-            <TextArea fx:id="cuatro12" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextArea fx:id="cuatro22" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <TextArea fx:id="cuatro32" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-            <TextArea fx:id="cuatro03" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3" />
-            <TextArea fx:id="cuatro13" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextArea fx:id="cuatro23" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-            <TextArea fx:id="cuatro33" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+            <TextArea fx:id="cuatro10" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" disable="true"/>
+            <TextArea fx:id="cuatro20" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" disable="true"/>
+            <TextArea fx:id="cuatro30" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" disable="true"/>
+            <TextArea fx:id="cuatro01" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" disable="true"/>
+            <TextArea fx:id="cuatro11" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" disable="true"/>
+            <TextArea fx:id="cuatro02" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2" disable="true"/>
+            <TextArea fx:id="cuatro21" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1" disable="true"/>
+            <TextArea fx:id="cuatro31" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="1" disable="true"/>
+            <TextArea fx:id="cuatro12" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" disable="true"/>
+            <TextArea fx:id="cuatro22" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2" disable="true"/>
+            <TextArea fx:id="cuatro32" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="2" disable="true"/>
+            <TextArea fx:id="cuatro03" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3" disable="true"/>
+            <TextArea fx:id="cuatro13" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" disable="true"/>
+            <TextArea fx:id="cuatro23" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="3" disable="true"/>
+            <TextArea fx:id="cuatro33" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="3" disable="true"/>
          </children>
       </GridPane>
       <Text fx:id="cuatroVerticales" layoutX="293.0" layoutY="160.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Verticales">
@@ -80,7 +80,7 @@
             <Font name="System Bold" size="19.0" />
          </font>
       </Text>
-      <Button fx:id="BotonIniciarTiempo" layoutX="148.0" layoutY="70.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="INICIAR" onAction="#IniciarPartida" />
+      <Button fx:id="BotonIniciarTiempo" layoutX="148.0" layoutY="70.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="INICIAR" onAction="#IniciarPartida4x4" />
    </children>
    <effect>
       <ColorAdjust brightness="-0.35" />
